Bug 1672095 - Always send NOTIFY_IME_OF_BLUR on GeckoView. r=masayuki

This is regression by bug 1672095. `GeckoEditableSupport` expects that
NOTIFY_IME_OF_BLUR is always sent. I would like to allow this even if
IME content observer is being destroyed.

To reproduce this, we have to lost application focus, I cannot write
geckoview-junit test.

Differential Revision: https://phabricator.services.mozilla.com/D94414